# Copyright (C) 2022 The Qt Company Ltd.
# SPDX-License-Identifier: BSD-3-Clause

if(TARGET Qt::Bluetooth)
    add_subdirectory(qbluetoothaddress)
    add_subdirectory(qbluetoothdevicediscoveryagent)
    add_subdirectory(qbluetoothdeviceinfo)
    add_subdirectory(qbluetoothlocaldevice)
    add_subdirectory(qbluetoothhostinfo)
    add_subdirectory(qbluetoothservicediscoveryagent)
    add_subdirectory(qbluetoothserviceinfo)
    add_subdirectory(qbluetoothsocket)
    add_subdirectory(qbluetoothuuid)
    add_subdirectory(qbluetoothserver)
    add_subdirectory(qlowenergycharacteristic)
    add_subdirectory(qlowenergydescriptor)
    add_subdirectory(qlowenergycontroller)
    add_subdirectory(qlowenergycontroller-gattserver)
    add_subdirectory(qlowenergyservice)
endif()
if(TARGET Qt::Nfc)
    add_subdirectory(qndefmessage)
    add_subdirectory(qndefrecord)
    add_subdirectory(qnearfieldmanager)
    add_subdirectory(qnearfieldtagtype1)
    add_subdirectory(qnearfieldtagtype2)
    add_subdirectory(qndefnfcsmartposterrecord)
    add_subdirectory(qndeffilter)
endif()
if(TARGET Qt::Bluetooth AND TARGET Qt::Nfc)
    add_subdirectory(cmake)
endif()
